fix dark mode (#227)

--- a/client/src/styles/pages/_Admin.scss
+++ b/client/src/styles/pages/_Admin.scss
@@ -72,7 +72,6 @@ main#administration {
         letter-spacing: 0.5px;
         line-height: 1rem;
         margin: 0.5rem 0;
-        color: black;
         padding-left: 1.5rem;
         position: relative;
         word-wrap: break-word;
